		slave connection threads into separate read and write threads.
	Both SimpleStatistics and KozaStatistics now print out, to the screen, 
		the best-of-generation fitness per-generation and the best-of-run
		fitness at the end.
	Performed some refactoring on SPEA2Evalutor and SPEA2Breeder to make them
		subclasses of SimpleEvaluator and SimpleBreeder, as they were
		sharing a lot of code in common.  Hope we did it right.  Also
		made small changes to SimpleEvaluator and SimpleBreeder to
		accommodate this.

18	P-P-P-Prerelease
	DEBreeder needs to have at least 4 individuals in a subpopulation in order
		to work properly.  We weren't verifying this condition.  Thanks to
		Michael Hart <mhart@baselinesolutions.com.au>
	Updated GPNode.clone() to be exactly the same as GPNode.cloneReplacing(),
		except that it returns object.  They're both deep-clone methods.
		We retain GPNode.cloneReplacing for historical compatability (and
		because it's convenient to not have to cast from Object).  In fact,
		clone() now just calls cloneReplacing().  We had prepared for this
		in the previous version by putting up a big warning sign on clone()
		to ward people off of using it as a light clone, as it used to be.
	Removed LawnmowerStatistics.java, EdgeStatistics.java, and
		AntStatistics.java, rolling them into KozaStatistics.java
	KozaStatistics.java and SimpleStatistics.java now call describe() on the
		individual regardless during finalStatistics
	NON-backward-compatible modification to SimpleProblemForm and
		GroupedProblemForm: added the subpopulation number(s) as an argument
		to the evaluate and describe functions.  This is intended to
		alleviate some nasty hacks in the distributed evaluator.  We had
		tried to avoid doing it but just can't. You'll have to add that
		argument (it's easy though) to get your code to compile again.
	PseudoRoundRobin removed from CompetitiveEvaluator, it wasn't finished.
	Revamping of Slave code
	Added the NK, SAT, and HIFF problems